syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "github.com/oragazzo/todo_grpc_tls/proto";

package todo;

service TodoService {
    rpc CreateTodo (CreateTodoRequest) returns (CreateTodoResponse);
    rpc GetTodos (GetTodosRequest) returns (GetTodosResponse);
    rpc UpdateTodo (UpdateTodoRequest) returns (UpdateTodoResponse);
    rpc DeleteTodo (DeleteTodoRequest) returns (DeleteTodoResponse);
}

message CreateTodoRequest {
    string title = 1;
    bool completed = 2;
    google.protobuf.Timestamp created_at = 3;
}

message CreateTodoResponse {
    int64 id = 1;
    string title = 2;
    bool completed = 3;
    google.protobuf.Timestamp created_at = 4;
}

message GetTodosRequest {}

message GetTodosResponse {
    repeated Todo todo_list = 1;

    message Todo {
        int64 id = 1;
        string title = 2;
        bool completed = 3;
        google.protobuf.Timestamp created_at = 4;
        google.protobuf.Timestamp updated_at = 5;
    }
}

message UpdateTodoRequest {
    int64 id = 1;
    string title = 2;
    bool completed = 3;
    google.protobuf.Timestamp updated_at = 4;
}

message UpdateTodoResponse {
    int64 id = 1;
    string title = 2;
    bool completed = 3;
    google.protobuf.Timestamp updated_at = 4;
}

message DeleteTodoRequest {
    int64 id = 1;
}

message DeleteTodoResponse {}